Introduce Header and Base64Encoded.